<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snake</string>
    <string name="menu_settings">Settings</string>
    <string name="welcomeMessage">Welcome to Snake game!</string>
    <string name="selectServerOrClient">To continue please select Your device\'s role in the team!</string>
    <string name="imServer">I want to be a server!</string>
    <string name="imUser">I want to join an existing game!</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bluetooth_must_be_enabled">Bluetooth must be enabled for a multiplayer game!</string>
    <string name="bluetooth_not_found_message">Bluetooth not found in Your phone. Bluetooth support is required for multiplayer game.</string>
    <string name="bluetooth_not_found_title">Bluetooth not found</string>
    <string name="error_dialog_close_button">Close</string>
    <string name="bluetooth_not_enabled_title">Bluetooth not enabled</string>
    <string name="singleplayer_button">Single palyer</string>
    <string name="title_activity_bluetooth_device_list">Select server device</string>
    <string name="hello_world">Hello world!</string>
    <string name="rescan_button_text">Tap to rescan</string>
    <string name="failed_to_connect_title">Failed to connect</string>
    <string name="server_connect_failed_message">Failed to connect to server. Either the server is not running on remote device or it is full.</string>
    <string name="connecting_wait_text">Connecting &#8230;</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="adj_playtime">Round time</string>
    <string name="adj_snake_speed">Snake speed</string>
    <string name="adj_bonus_probability">Bonus probability</string>
    <string name="adj_skull_probability">Skull probability</string>
    <string name="ok">OK</string>
    <string name="settings_title">Game settings</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="map_size">Map size</string>
    <string name="start_game">Start game</string>
    <string name="your_user_data">Your user data:</string>
    <string name="other_users">Other users:</string>
    <string name="user_settings_title">User settings</string>

</resources>